# cs

./: .gitignore  calibration_table.csv  hw01.cc  money.py
NeuralNetwork_python/: dataloader_test.py  lstm.py  minst.py  neural_network.ipynb
NeuralNetwork_python/.ipynb_checkpoints/: neural_network-checkpoint.ipynb
NeuralNetwork_python/vehicle_model/: VehicleModel.pth  calibration_table.csv  data_prepocess.py  dataloader_test.py  generateCalibrationTable.py  gpt_dataset  gpt_example_lstm.py  lstm(1).py  lstm.py  test.py  vehicleModeling bak.py  vehicleModeling copy.py  vehicleModeling.ipynb  vehicleModeling.py  vehicleModeling_numpy.py
cmake_tutorial/cmake-3.28.2-tutorial-source/Step2/: CMakeLists.txt  tutorial.cxx
cs61a/: money_count.py
cs61a/disc/: disc05.py
cs61a/hog/: .ok_history  .ok_storage  hog.py
cs61a/hw02/: .ok_history  func_decorator_test.py
cs61a/hw03/: hw03.py
cs61a/lab01/: .ok_history  lab01.py
cs61a/lab02/: .ok_history
cs61a/lab03/: .ok_history  lab03.py
cuda/: main.cc
missing_semester/lecture1/: marco.sh  polo.sh
missing_semester/lecture2/: output.txt  task3.sh  task3_s.sh
missing_semester/lecture4/: letter_combination.sh  not_occur.txt  q4_answer.sh
models/: 202403200955_throttle_loss0.0013437051421086954.pth  202403201537_throttle_loss0.02047742222650693.pth  202403201541_throttle_loss0.020864738760372765.pth  202403201633_throttle_loss0.0018986771381721483.pth  202403201704_throttle_loss0.0019025833301924806.pth  202403201730_throttle_loss0.0019034982420005973.pth
output/: hw01
shenlan/numerical_optimization/: hw01  (+4 more)
(+94 files in other folders)
